Tue Feb 24 01:41:30 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (location_popup_handler): Make the
	dialog look like the nautilus dialog.
	(expander_activate_cb): get the order correct.

2004-02-23  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (list_selection_changed): Call
	bookmarks_check_add_sensitivity().
	(shortcut_exists): New helper function; moved the testing code
	over from bookmarks_check_add_sensitivity().
	(bookmarks_check_add_sensitivity): Check the contents of the
	selection in the file/folder list.  Use shortcut_exists().
	(shortcuts_add_bookmark_from_path): Don't insert the bookmark if
	the path is already in the shortcuts list.
	(add_bookmark_button_clicked_cb): Add the bookmarks from the list
	selection or from the current folder, as appropriate.

Mon Feb 23 21:09:06 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (shortcuts_pane_create): Add
	mnemonics.  Sorry translators.

Tue Feb 24 02:24:58 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Additions. This should be complete for the main ChangeLog
	now, still need to sift through gdk-pixbuf, docs, and translations.

Mon Feb 23 19:57:45 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkcellrendererseptext.c (gtk_cell_renderer_sep_get_size):
	Add a get_size implementation so that we are no longer the same
	height as text.

2004-02-24  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkfilechooserdefault.c: (shortcuts_insert_path),
	(shortcuts_remove_rows), (shortcuts_append_bookmarks),
	(create_shortcuts_model), (shortcuts_tree_create),
	(gtk_file_chooser_default_remove_shortcut_folder):
	Improve bookmark list rendering by controlling the visibility
	of the pixbuf cell so that it will be invisible for the separator
	row, also use a list store instead of a tree store for the model
	so we won't get unnecessary space for an expander.
	
Tue Feb 24 01:08:27 2004  Matthias Clasen  <maclas@gmx.de>
